Fix pixel perfect of profile-form__details block on mobile

--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -15,6 +15,10 @@
   flex-shrink: 0;
   margin-right: 15px;
   color: $black-color-secondary;
+
+  &--name {
+    margin-right: 11px;
+  }
 }
 
 .field__input {
